Updates Swagger
- path variables in method GET
